[package]
name = "SQL-Backup-Restore"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
flate2 = "1.0"
postgres = "0.19"
dotenvy = "0.15"
dotenvy_macro = "0.15"
regex = "1.8"
